try to fix menu on mobile

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -11,19 +11,13 @@
 }
 
 html {
-  font-size: 12px;
+  font-size: 16px;
   @include tablet {
-    font-size: 16px;
+    font-size: 14px;
   }
   @include desktop {
     font-size: 20px;
   }
-}
-
-@media (max-width: 480px) {
-   html {
-        font-size: 14px;
-    }
 }
 
 body {
